viya/sas-bases/overlays/network/ingress/security/transformers/ingress-tls-transformers.yaml
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-ingress-tls-transformer
patch: |-
  - op: add
    path: /spec/rules/0/host
    value: $(INGRESS_HOST)
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST)], secretName: sas-ingress-certificate}]
target:
  kind: Ingress
  name: .*
vars:
- name: INGRESS_HOST
  objref:
    kind: ConfigMap
    name: ingress-input
    apiVersion: v1
  fieldref:
    fieldpath: data.INGRESS_HOST
